# NumSim

./: .gitignore  CMakeLists.txt  MPI_TODO.md  README.md  TODO.md  job.sh  load.sh  parameters.txt  result.txt  result_c.txt  result_n.txt  result_ns.txt  result_st.txt  result_t.txt  run.sh  tests.sh  time.txt
Google_tests/: CMakeLists.txt
domains/: channel_obstacle.txt  co_to_bin.py  curve.txt  driven_cavity.xcf  ferarri.txt  ferarritest.txt  ferrari2.txt  image.txt  lid_driven_cavity.txt  lid_driven_cavity.xcf  lid_driven_obstacle.txt  numsim_obstacle.txt  simple_test_domain.txt  simtech_obstacle.txt  uni-stuttgart_complett.txt  uni_stuttgart_ausschnitt.txt  vase.txt
multiple-files/: settings.cpp  settings.h
mutiple-files/: settings.h
out_ref1/: output_0001.txt  output_0001.vti  output_0002.txt  output_0002.vti  output_0003.txt  output_0004.txt  output_0005.txt  output_0007.txt  output_0008.txt  output_0008.vti  output_0009.vti  output_0011.txt  output_0012.txt  output_0013.txt  output_0013.vti  output_0014.txt  output_0015.txt  output_0016.vti  output_0017.vti  output_0020.vti  output_0022.txt  output_0022.vti  output_0023.txt  output_0023.vti  output_0024.vti  output_0025.txt  output_0026.vti  output_0028.txt  output_0030.vti  output_0031.txt  output_0031.vti  output_0032.txt  output_0033.txt  output_0034.txt  output_0034.vti  output_0037.vti  output_0038.vti  output_0039.vti  output_0040.vti  output_0042.txt  (+345 more)
out_ref3/: output_0000.txt  output_0000.vti  output_0001.txt  output_0001.vti  output_0002.txt  output_0002.vti  output_0003.txt  output_0003.vti  output_0004.txt  output_0004.vti  output_0005.txt  output_0005.vti  output_0006.txt  output_0006.vti  output_0007.txt  output_0007.vti  output_0008.txt  output_0008.vti  output_0009.txt  output_0009.vti  output_0010.txt  output_0010.vti  output_0011.txt  output_0011.vti  output_0012.txt  output_0012.vti  output_0013.txt  output_0013.vti  output_0014.txt  output_0014.vti  output_0015.txt  output_0015.vti  output_0016.txt  output_0016.vti  output_0017.txt  output_0017.vti  output_0018.txt  output_0018.vti  output_0019.txt  output_0019.vti  (+1102 more)
parameters/: CMakeLists.txt  catamaran.txt  catamaran2.txt  catamaran_color_narrow_parameterfile.txt  channel.txt  channel_obstacle.txt  channel_with_step.txt  channel_with_step_parameterfile.txt  convection.txt  convection_parameterfile.txt  curve.txt  driven_cavity.txt  driven_cavity_big.txt  driven_cavity_original.txt  heart_parameterfile.txt  kvs_heat.txt  kvs_long_heat_parameterfile.txt  kvs_long_parameterfile.txt  kvs_parameterfile.txt  lid_driven_cavity.txt  lid_driven_cavity10.txt  lid_driven_cavity2.txt  lid_driven_cavity4.txt  lid_driven_cavity8.txt  lid_driven_cavity_CG.txt  lid_driven_cavity_RB.txt  lid_driven_cavity_cg.txt  lid_driven_cavity_cgs.txt  lid_driven_cavity_domain.txt  lid_driven_cavity_original.txt  lid_driven_cavity_parallel2.txt  lid_driven_cavity_sors.txt  lid_driven_cavity_temp.txt  lid_driven_obstacle.txt  nozzle.txt  nozzle_parameterfile.txt  numsim_channel.txt  numsim_flow_big_parameterfile.txt  numsim_obstacle.txt  simtech_big.txt  (+9 more)
parameters/domains/: Sauber1.txt  Sauber1_small.txt  catamaran.txt  catamaran2.txt  catamaran_color_narrow.txt  co_to_bin.py  (+40 more)
ref_solution/: output_0000.txt  output_0000.vti  output_0003.vti  output_0004.vti  output_0005.vti  output_0006.txt  output_0006.vti  output_0007.vti  output_0009.txt  output_0010.txt  output_0010.vti  output_0011.vti  output_0012.vti  output_0014.vti  output_0015.vti  output_0016.txt  output_0017.txt  output_0018.txt  output_0018.vti  output_0019.txt  output_0019.vti  output_0020.txt  output_0021.txt  output_0021.vti  output_0024.txt  output_0025.vti  output_0026.txt  output_0027.txt  output_0027.vti  output_0028.vti  output_0029.txt  output_0029.vti  output_0030.txt  output_0032.vti  output_0033.vti  output_0035.txt  output_0035.vti  output_0036.txt  output_0036.vti  output_0037.txt  (+343 more)
scripts/: debug.sh  install.sh  job.sh  job_catamaran.txt  job_nozzle.txt  job_numsim.txt  job_simtech.txt  job_two_channels.txt  load.sh  profile.sh  rebuild.sh  run.sh  time.sh
src/: Array2D.cpp  Array2D.h  CMakeLists.txt  Discretization.cpp  Discretization.h  FieldVariable.cpp  FieldVariable.h  Makefile  StaggeredGrid.cpp  StaggeredGrid.h  main.cpp  settings.cpp  settings.h  tests.cpp
src/comparison/: main.cpp
src/computation/: 0_computation.cpp  0_computation.h  1_computation_parallel.cpp  1_computation_parallel.h  computation.cpp  computation.h
src/discretization/: 0_staggered_grid.cpp  0_staggered_grid.h  1_discretization.cpp  1_discretization.h  2_central_differences.cpp  2_central_differences.h  2_donor_cell.cpp  2_donor_cell.h
src/output_writer/: output_writer.cpp  output_writer.h  output_writer_paraview.cpp  output_writer_paraview.h  output_writer_paraview_parallel.cpp  output_writer_paraview_parallel.h  output_writer_text.cpp  output_writer_text.h  output_writer_text_parallel.cpp  output_writer_text_parallel.h  write_paraview_output.cpp  write_paraview_output.h
src/partitioning/: partitioning.cpp  partitioning.h
src/pressure_solver/: 0_pressure_solver.cpp  0_pressure_solver.h  0_pressure_solver_parallel.cpp  0_pressure_solver_parallel.h  1_conjugate_gradient.cpp  1_conjugate_gradient.h  1_conjugate_gradient_preconditioned.cpp  1_conjugate_gradient_preconditioned.h  1_gauss_seidel.cpp  1_gauss_seidel.h  1_multigrid.cpp  1_multigrid.h  1_pressure_solver_parallel.cpp  1_pressure_solver_parallel.h  1_red_black.cpp  1_red_black.h  1_sor.cpp  1_sor.h  2_conjugate_gradient.cpp  2_conjugate_gradient.h  2_conjugate_gradient_parallel.cpp  2_conjugate_gradient_parallel.h  2_conjugate_gradient_preconditioned.cpp  2_conjugate_gradient_preconditioned.h  2_red_black.cpp  2_red_black.h  2_red_black_sor.cpp  2_red_black_sor.h  gauss_seidel.cpp  gauss_seidel.h  pressure_solver.cpp  pressure_solver.h  sor.cpp  sor.h
src/storage/: array2d.cpp  array2d.h  field_variable.cpp  field_variable.h  fieldvariable.cpp  fieldvariable.h  marker2d.cpp  marker2d.h  particle2d.cpp  particle2d.h
task3_openfoam/: .gitignore
(+6110 files in other folders)
